--- a/Mvc3StructureMapIoc/Mvc3StructureMapIoc.csproj
+++ b/Mvc3StructureMapIoc/Mvc3StructureMapIoc.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModelBinderTypeMappingDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructureMapControllerActivator.cs" />
     <Compile Include="StructureMapDependencyResolver.cs" />
+    <Compile Include="StructureMapModelBinderProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
