--- a/Mvc3StructureMapIoc/Mvc3StructureMapIoc.csproj
+++ b/Mvc3StructureMapIoc/Mvc3StructureMapIoc.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructureMapControllerActivator.cs" />
     <Compile Include="StructureMapDependencyResolver.cs" />
+    <Compile Include="StructureMapFilterProvider.cs" />
     <Compile Include="StructureMapModelBinderProvider.cs" />
   </ItemGroup>
   <ItemGroup>
