Support for global action filters.

--- a/SampleWebsite/SampleWebsite.csproj
+++ b/SampleWebsite/SampleWebsite.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Code\Bar.cs" />
     <Compile Include="Code\Logger.cs" />
     <Compile Include="Code\LoggingFilter.cs" />
+    <Compile Include="Code\YourMomGlobalFilter.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
