--- a/Mvc3StructureMapIoc/Mvc3StructureMapIoc.csproj
+++ b/Mvc3StructureMapIoc/Mvc3StructureMapIoc.csproj
@@ -48,11 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalFilterRegistration.cs" />
+    <Compile Include="GlobalFilterRegistrationList.cs" />
     <Compile Include="ModelBinderTypeMappingDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructureMapControllerActivator.cs" />
     <Compile Include="StructureMapDependencyResolver.cs" />
     <Compile Include="StructureMapFilterProvider.cs" />
+    <Compile Include="StructureMapGlobalFilterProvider.cs" />
     <Compile Include="StructureMapModelBinderProvider.cs" />
   </ItemGroup>
   <ItemGroup>
